<resources>
    <string name="app_name">Lessons2KeyBoard</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="Delenie">/</string>
    <string name="Ravno">=</string>
    <string name="Summ">+</string>
    <string name="Vychest">-</string>
    <string name="Ymnoghit">X</string>
    <string name="PlusNaMinus">+/-</string>
    <string name="Procent">%</string>
    <string name="todo">TODO</string>
</resources>