<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <Button
            android:text="@string/_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"

            android:id="@+id/button"/>
    <Button
            android:text="@string/_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:id="@+id/button2"/>

    <Button
            android:text="@string/_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:id="@+id/button3"/>

    <Button
            android:text="@string/_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center|start"
            android:id="@+id/button4"/>

    <Button
            android:text="@string/_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/button5"/>

    <Button
            android:text="@string/_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right|end"
            android:id="@+id/button6"/>

    <Button
            android:text="@string/_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left|start"
            android:id="@+id/button7"/>

    <Button
            android:text="@string/_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:id="@+id/button8"/>

    <Button
            android:text="@string/_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right|end"
            android:id="@+id/button9"/>

</FrameLayout>