<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <Space android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:layout_weight="1"
                android:textSize="30sp"/>


        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2" android:textSize="30sp"/>
        <Button android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/_3" android:textSize="30sp"/>

    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <Button android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/_4" android:textSize="30sp"/>

        <Button android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/_5" android:textSize="30sp"/>
        <Button android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/_6" android:textSize="30sp"/>

    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_7" android:textSize="30sp"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_8" android:textSize="30sp"/>
        <Button android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/_9" android:textSize="30sp"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0" android:textSize="30sp"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point" android:textSize="30sp"/>


    </LinearLayout>
    <Space android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"/>

</LinearLayout>

