<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <Button
            android:text="@string/Delenie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button28"
            app:layout_constraintStart_toEndOf="@+id/button22" android:layout_marginStart="10dp"
            app:layout_constraintBottom_toTopOf="@+id/button24"
            android:layout_marginBottom="12dp"
    />
    <Button
            android:text="@string/Ravno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button27"
            app:layout_constraintStart_toEndOf="@+id/button20" app:layout_constraintTop_toBottomOf="@+id/button26"
            android:layout_marginStart="10dp" android:layout_marginTop="12dp"
    />
    <Button
            android:text="@string/Summ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button26"
            app:layout_constraintStart_toEndOf="@+id/button15" app:layout_constraintTop_toBottomOf="@+id/button25"
            android:layout_marginStart="10dp" android:layout_marginTop="12dp"/>
    <Button
            android:text="@string/Vychest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button25"
            app:layout_constraintStart_toEndOf="@+id/button18" app:layout_constraintTop_toBottomOf="@+id/button24"
            android:layout_marginStart="10dp" android:layout_marginTop="12dp"/>
    <Button
            android:text="@string/Ymnoghit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button24"
            app:layout_constraintStart_toEndOf="@+id/button14"
            android:layout_marginStart="10dp" app:layout_constraintBottom_toTopOf="@+id/button18"
            android:layout_marginBottom="12dp"/>
    <Button
            android:text="@string/PlusNaMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button23"
            app:layout_constraintStart_toEndOf="@+id/button21" app:layout_constraintBottom_toTopOf="@+id/button11"
            android:layout_marginStart="10dp" android:layout_marginBottom="12dp"/>
    <Button
            android:text="@string/Procent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button22"
            app:layout_constraintStart_toEndOf="@+id/button23" app:layout_constraintBottom_toTopOf="@+id/button14"
            android:layout_marginStart="10dp" android:layout_marginBottom="12dp"/>
    <Button
            android:text="@string/_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="313dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button11"
            app:layout_constraintStart_toEndOf="@+id/button10" android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button12"
            app:layout_constraintStart_toEndOf="@+id/button13" android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/button11" android:layout_marginTop="12dp"/>
    <Button
            android:text="@string/_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button13"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/button10"/>
    <Button
            android:text="@string/_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button14"
            app:layout_constraintStart_toEndOf="@+id/button11" android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button15"
            app:layout_constraintStart_toEndOf="@+id/button16" app:layout_constraintTop_toBottomOf="@+id/button18"
            android:layout_marginStart="10dp" android:layout_marginTop="12dp"/>
    <Button
            android:text="@string/_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button16"
            app:layout_constraintStart_toEndOf="@+id/button17" app:layout_constraintTop_toBottomOf="@+id/button12"
            android:layout_marginStart="10dp" android:layout_marginTop="12dp"/>
    <Button
            android:text="@string/_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button17"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/button13" android:layout_marginTop="12dp"/>
    <Button
            android:text="@string/_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button18"
            app:layout_constraintStart_toEndOf="@+id/button12" android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/button14" android:layout_marginTop="12dp"/>
    <Button
            android:text="@string/_0"
            android:layout_width="186sp"
            android:layout_height="wrap_content" android:id="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/button17" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp" android:layout_marginTop="12dp"/>
    <Button
            android:text=","
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button20"
            app:layout_constraintTop_toBottomOf="@+id/button15" app:layout_constraintStart_toEndOf="@+id/button19"
            android:layout_marginTop="12dp" android:layout_marginStart="10dp"
    />
    <Button
            android:text="AC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button21"
            app:layout_constraintBottom_toTopOf="@+id/button10" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp" android:layout_marginBottom="12dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>